--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "MohsenAhmadkhani",
-  "homepage": "",
+  "homepage": "https://mohsen-gis.github.io/portfolio",
   "version": "1.3.0",
   "dependencies": {
     "build": "^0.1.4",
@@ -53,7 +53,7 @@
     "gulp": "4.0.2",
     "gulp-append-prepend": "1.0.8"
   },
-  "description": "Paper Kit React is a free Bootstrap 4, React, React Hooks and Reactstrap UI Kit with pale colors, beautiful typography and thoughtful drawings. We've created it having paper and drawings in mind.",
+  "description": "",
   "main": "src/assets/scss/paper-kit.scss",
   "repository": {
     "type": "git",
