--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "MohsenAhmadkhani",
-  "homepage": "www.mohsenahmadkhani.com/portfolio",
+  "homepage": "www.mohsenahmadkhani.com",
   "version": "1.3.0",
   "dependencies": {
     "build": "^0.1.4",
